eurekaserver/k8s/eurekaserver.yaml
# @Author: nickchen
# @Date:   2020-08-03T10:23:57+08:00
# @Last modified by:   nickchen
# @Last modified time: 2020-08-03T11:08:23+08:00
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eurekaserver
  namespace: default
spec:
  selector:
    matchLabels:
      app: eurekaserver
      release: train
  replicas: 1
  template:
    metadata:
      labels:
        app: eurekaserver
        release: train
    spec:
      containers:
      - image: nickilchen/eurekaserver:v_1
        imagePullPolicy: Always
        name: eurekaserver
        ports:
          - containerPort: 8761
            name: eurekaserver
      dnsPolicy: ClusterFirst
      restartPolicy: Always
---
#内部服务发现
apiVersion: v1
kind: Service
metadata:
  labels:
    app: eurekaserver
    release: train
  name: eurekaserver
  namespace: default
spec:
  ports:
  - name: eurekaserver
    port: 8761
    targetPort: eurekaserver
  type: ClusterIP
  selector:
    app: eurekaserver
    release: train
---
# Nodeport
apiVersion: v1
kind: Service
metadata:
  labels:
    app: eurekaserver
    release: train
  name: eurekaserver-nodeport
  namespace: default
spec:
  ports:
  - name: eurekaserver
    port: 8761
    targetPort: eurekaserver
    nodePort:
  type: NodePort
  selector:
    app: eurekaserver
    release: train
---
# ingrees
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: eurekaserver
  namespace: default
  labels:
    app: eurekaserver
    release: train
spec:
  rules:
  - host: eurekaserver.default.net
    http:
      paths:
      - backend:
          serviceName: eurekaserver
          servicePort: 8761
        path: /
